@@ -1,0 +1,10 @@
+# -*- coding: utf-8 -*-
+
+import os
+import sys
+
+sys.path.insert(0, os.path.abspath('.'))
+extensions = ['test_enumerable_node']
+
+master_doc = 'index'
+numfig = True
