@@ -1,0 +1,38 @@
+========================
+test-add_enumerable_node
+========================
+
+.. toctree::
+   :numbered:
+
+
+First section
+=============
+
+.. _first_figure:
+
+.. figure:: rimg.png
+
+   First figure
+
+.. _first_my_figure:
+
+.. my-figure:: rimg.png
+
+   First my figure
+
+Second section
+==============
+
+.. _second_my_figure:
+
+.. my-figure:: rimg.png
+
+   Second my figure
+
+Reference section
+=================
+
+* first_figure is :numref:`first_figure`
+* first_my_figure is :numref:`first_my_figure`
+* second_my_figure is :numref:`second_my_figure`
